tests/fail/build_meta.tk
// Copyright (c) 2025 YiZhonghua<zhyi@dpai.com>. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
pub const package = (
    name = "toka_app",
    version = "0.1.0"
)

shape Point (
    a: i32,
    b: i32,
    c: i32
)

pub const POINT = Point(a = 1, b = 2, c = 3)

// Anonymous Record Constant
// Type is inferred as (x: i32, y: i32, z: i32)
// The type of anonymous record is unique (Generative Typing) and cannot be interchanged with any other types
// When there is no type name on the left of (x = 1...), it represents an anonymous record type declaration + in-place instantiation + initialization (In-place Creation)
pub const XYZ = (x = 1, y = 2, z = 3)

fn main() -> i32 {
    
    println("{}", POINT.a) // EXPECT: error[E0406]:
    
    println("{}", XYZ.x) // EXPECT: error[E0406]:
    auto point = Point(a = 1, b = 2, c = 3)
    auto xyz = (x = 1, y = 2, z = 3)
    
    println("{}", point.a) // EXPECT: error[E0406]:
    println("{}", xyz.x)
    return 0
}